Add required description and license fields

--- a/template/Cargo.mustache
+++ b/template/Cargo.mustache
@@ -2,6 +2,8 @@
 name = "{{{packageName}}}"
 version = "{{{packageVersion}}}"
 edition = "2018"
+description = "Imgur API client library for Rust."
+license = "MIT"
 
 [dependencies]
 serde = "^1.0"
