Exclude some files from crate package

--- a/template/Cargo.mustache
+++ b/template/Cargo.mustache
@@ -4,6 +4,7 @@ version = "{{{packageVersion}}}"
 edition = "2018"
 description = "Imgur API client library for Rust."
 license = "MIT"
+include = ["src/**/*", "LICENSE.txt", "README.md"]
 
 [dependencies]
 serde = "^1.0"
